# rust-wasm-boilerplate

./: Cargo.toml  README.md  webpack.config.js
public/: index.html  index.js
src/: lib.rs
